[backend/frontend] Add the ability to customize the expiration time (#1171)
Co-authored-by: Romuald Lemesle <romuald.lemesle@filigran.io>